--- a/packages/fast-components/package.json
+++ b/packages/fast-components/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@microsoft/fast-element": "^0.1.0",
-    "@microsoft/fast-web-utilities": "4.4.0"
+    "@microsoft/fast-web-utilities": "4.4.0",
+    "tabbable": "^4.0.0"
   }
 }
